--- a/index.html
+++ b/index.html
@@ -127,9 +127,8 @@
             class="twitter-link"
             target="_blank"
             href="https://twitter.com/jonasschmedtman"
-            >Jonas Schmedtmann</a
-          >. Use for learning or your portfolio. Don't use to teach. Don't claim
-          as your own.
+            >Not Designed By Christian Francis</a
+          >. Tutorial Work.
         </p>
       </div>
 
