Design Credit Fix

--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
         </div>
 
         <p class="copyright">
-          &copy; Copyright by
+          &copy; Copyright not by
           <a
             class="twitter-link"
             target="_blank"
             href="https://twitter.com/jonasschmedtman"
-            >Not Designed By Christian Francis</a
-          >. Tutorial Work.
+            >Christian Francis</a
+          >. Click through for tutorial instructor.
         </p>
       </div>
 
