Design Credit Fixed

--- a/index.html
+++ b/index.html
@@ -122,13 +122,14 @@
         </div>
 
         <p class="copyright">
-          &copy; Copyright not by
+          &copy;
           <a
             class="twitter-link"
             target="_blank"
             href="https://twitter.com/jonasschmedtman"
-            >Christian Francis</a
-          >. Click through for tutorial instructor.
+            >Copyright</a
+          >
+          not by Christian Francis. Click link for owner.
         </p>
       </div>
 
