Responsive Design Prep

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             href="https://twitter.com/jonasschmedtman"
             >Copyright</a
           >
-          not by Christian Francis. Click link for owner.
+          not by Christian Francis.
         </p>
       </div>
 
