--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="google-site-verification"
+      content="0OXxLN6356Y1FZBBSSaKQKumjmJseexU7qtvzUJoziE"
+    />
     <link
       href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700"
       rel="stylesheet"
