--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
   <body>
     <div class="container">
       <header class="header">
-        <img src="src/img/logo.png" alt="Logo" class="header__logo" />
+        <a class="header__home" href="/">
+          <img src="src/img/logo.png" alt="Logo" class="header__logo" />
+        </a>
         <form class="search">
           <input
             type="text"
