--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             type="text"
             class="search__field"
             placeholder="Search over 1,000,000 recipes..."
+            value="pie"
           />
           <button class="btn search__btn">
             <svg class="search__icon">
