--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
+    <meta property="og:title" content="forkify" />
+    <meta property="og:image" content="src/img/favicon.png" />
 
     <link rel="stylesheet" href="src/sass/main.scss" />
     <script type="module" defer src="src/js/controller.js"></script>
