--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
-    <meta property="og:title" content="forkify" />
+    <meta
+      property="og:title"
+      content="forkify // Search over 1,000,000 recipes"
+    />
     <meta property="og:image" content="src/img/favicon.png" />
 
     <link rel="stylesheet" href="src/sass/main.scss" />
