rich link og metas

--- a/index.html
+++ b/index.html
@@ -20,7 +20,32 @@
       property="og:title"
       content="forkify // Search over 1,000,000 recipes"
     />
-    <meta property="og:image" content="src/img/favicon.png" />
+    <meta property="og:image" itemprop="image" content="src/img/favicon.png" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="forkify // Search over 1,000,000 recipes"
+    />
+    <meta name="twitter:image:alt" content="src/img/favicon.png" />
+    <meta name="twitter:image" content="src/img/favicon.png" />
+    <link href="" rel="canonical" />
+    <meta property="og:image:width" content="250" />
+    <meta property="og:image:height" content="250" />
+    <meta property="og:image:type" content="image/png" />
+    <link rel="apple-touch-icon" sizes="250x250" href="src/img/favicon.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="250x250"
+      href="src/img/favicon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="250x250"
+      href="src/img/favicon.png"
+    />
+    <link rel="mask-icon" href="src/img/favicon.png" />
 
     <link rel="stylesheet" href="src/sass/main.scss" />
     <script type="module" defer src="src/js/controller.js"></script>
