rich link og metas

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700"
       rel="stylesheet"
     />
+
     <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
     <meta
       property="og:title"
@@ -28,7 +29,7 @@
     />
     <meta name="twitter:image:alt" content="src/img/favicon.png" />
     <meta name="twitter:image" content="src/img/favicon.png" />
-    <link href="" rel="canonical" />
+    <link href="https://forkify-christian.netlify.app/" rel="canonical" />
     <meta property="og:image:width" content="250" />
     <meta property="og:image:height" content="250" />
     <meta property="og:image:type" content="image/png" />
